# AgentWhetters-swe-bench-pro-purple-simple_loop

./: .env.sample  Dockerfile  README.md  amber-manifest.json5  entrypoint.sh  pyproject.toml  scenario-auto.toml
.github/workflows/: test-and-publish.yml
agentbeats/: run_scenario.py
docs/: architecture-simple_loop.md
src/purple/: docker_runner.py  server.py
tests/: conftest.py  test_baseline_gate.py  test_docker_runner.py  test_purple.py  test_service_tier.py
